--- a/index.html
+++ b/index.html
@@ -102,6 +102,89 @@
 
     // Start your code here
     // You may move this JS to another file if you wish
+
+    const sampleArray = [
+      {name: 'Aarav', age: 20},
+      {name: 'Jaskaran', age: 21}
+    ];
+
+    const timerLabel = 'Demo Timer';
+    const groupLabel = 'Demo Group';
+
+    errorBtns.forEach(btn => btn.addEventListener('click', consoleDemo));
+
+    function consoleDemo(evt)
+    {
+      switch(evt.target.textContent)
+      {
+        case 'Console Log':
+          console.log('Console Log: Logged');
+          break;
+        
+        case 'Console Error':
+          console.error('Console Error: Something went wrong!');
+          break;
+
+        case 'Console Count':
+          console.count('Console Count button clicked');
+          break;
+
+        case 'Console Warn':
+          console.warn('Console Warn: This is only a warning.');
+          break;
+
+        case 'Console Assert':
+          console.assert(2 + 2 === 5, 'Assert failed: 2 + 2 ≠ 5');
+          break;
+
+        case 'Console Clear':
+          console.clear();
+          break;
+
+        case 'Console Dir':
+          console.dir(document.body);
+          break;
+
+        case 'Console dirxml':
+          console.dirxml(document.querySelector('main'));
+          break;
+
+        case 'Console Group Start':
+          console.group(groupLabel);
+          console.log('Inside the group – more logs will be indented.');
+          break;
+
+        case 'Console Group End':
+          console.groupEnd(groupLabel);
+          break;
+
+        case 'Console Table':
+          console.table(sampleArray);
+          break;
+
+        case 'Start Timer':
+          console.time(timerLabel);
+          break;
+
+        case 'End Timer':
+          console.timeEnd(timerLabel);
+          break;
+
+        case 'Console Trace':
+          firstLevel();
+          break;
+
+        case 'Trigger a Global Error':
+          throw new Error('Global error triggered intentionally!');
+          break;
+
+      }
+    }
+
+    function firstLevel() { secondLevel(); }
+    function secondLevel() { thirdLevel(); }
+    function thirdLevel() { console.trace('Console Trace'); }
+
   </script>
 </body>
 
