--- a/index.html
+++ b/index.html
@@ -95,57 +95,6 @@
       application: 'cse110-lab9-demo'
     });
 
-    function reportErrorToBackend(payload) {
-      /* Example POST to your own endpoint.  This is purely for
-        demonstration—replace the URL with an endpoint you control,
-        or stub it out during development. */
-      fetch('https://example.com/log-js-error', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(payload)
-      }).catch(() => { /* ignore network errors in the demo */ });
-    }
-
-     window.onerror = function (msg, src, line, col, err) {
-      const errorData = {
-        type: 'error',
-        message: msg,
-        source: src,
-        line,
-        column: col,
-        stack: err && err.stack
-      };
-      console.group('Global Error Caught');
-      console.error(errorData);
-      console.groupEnd();
-
-      //send to your server
-      reportErrorToBackend(errorData);
-
-      //TrackJS auto-captures it too (nothing extra to do)
-
-      /* return true prevents the default browser error dialog.
-        Omit or set to false if you *want* the red overlay. */
-      return false;
-    };
-
-    // Unhandled Promise rejections
-    window.addEventListener('unhandledrejection', event => {
-      const errorData = {
-        type: 'unhandledrejection',
-        message: event.reason ? event.reason.message : String(event.reason),
-        stack: event.reason && event.reason.stack
-      };
-
-      console.group('Unhandled Promise Rejection');
-      console.error(errorData);
-      console.groupEnd();
-
-      reportErrorToBackend(errorData);
-
-      /* TrackJS captures these automatically as well */
-    });
-
     class MathError extends Error {
       constructor(message) {
         super(message);
@@ -266,9 +215,10 @@
     function secondLevel() { thirdLevel(); }
     function thirdLevel() { console.trace('Console Trace'); }
 
-    
-
-
+    window.onerror = function (msg, url, line, col, err) {
+      console.log(`Global handler caught: ${msg} @ ${line}:${col}`);
+      return false;            // let the browser keep reporting it, too
+    };
 
   </script>
 </body>
