--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
     </section>
   </main>
 
-  <script src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
   <script>
-    
-    window.TrackJS && TrackJS.install({
-      token: 'YOUR_TOKEN_HERE',           // ← paste real token
-      application: 'cse110-lab9-demo'
+    window.TrackJS && TrackJS.install({ 
+      token: "e665de1620b94a119a862d202a9584f6",
+      application: "cse110-lab9-demo"
+      // for more configuration options, see https://docs.trackjs.com
     });
+  </script>
+  <script>
 
     class MathError extends Error {
       constructor(message) {
